Avoid polling processes if they report what we need with OCS7

This is apparently what the OCS7 stuff is supposed to solve, so let's
use it if we can.

REVIEW: 128784
BUG: 325442